tests/fixtures/invalid/raw_ptr/addr_of_escapes_frame.lby
# An `addr_of` pointer passed INTO a callee cannot be dereferenced there on the
# interpreters: L0459.
#
# This program is NOT wrong. Passing an address into a function is the canonical
# out-parameter idiom (C's `scanf("%d", &x)`, `strtol(s, &end, 10)`, `qsort`), and it
# is well-defined: C11 6.2.4p6 ties a local's lifetime to its *block*, and calling a
# function does not end the caller's block, so `x` is alive for the whole call. The
# NATIVE backend compiles and runs this correctly, because `addr_of` there is a real
# `lea`.
#
# It lives under `invalid/` because it pins a real refusal, not because the code is
# invalid: the interpreters keep each frame's locals in that frame's own environment,
# so a callee genuinely cannot reach `main`'s `x`. Given the choice between refusing
# and reading/writing the wrong storage, they refuse — loudly, never silently. This is
# a known acceptance divergence between the tiers, and the accepted limitation of the
# interpreter model: an `addr_of` pointer is usable only inside the body of the
# function that took the address, so pointer-taking code cannot be factored into a
# helper there.
#
# Within one frame, `addr_of` aliases fully — see tests/fixtures/valid/
# raw_ptr_aliasing.lby.
fn poke p ptr<i64> -> i64
    unsafe
        ptr_write(p, 5)
    0

fn main -> i64
    let x i64 = 1
    unsafe
        let p ptr<i64> = addr_of(x)
        poke(p)
    x
